# asca-rust

./: .gitignore  CHANGELOG.md  CNAME  Cargo.toml  README.md  doc-cli.md  doc.md  grammar.md  index.html
.cargo/: config.toml
.github/workflows/: release.yml  test_run.yml
doc/: doc-cli.md  doc.md
doc/grammars/: alias_peg.md  config_peg.md  rule_peg.md
examples/anaki/: config.asca  p-anaki-to-anaki.json  p-anaki-to-anaki.rsca  rules1.rsca  rules2.rsca  words.wsca
examples/indo-european/: config.asca  early-pgmc.rsca  late-pgmc.rsca  pie-pronouns.wsca  pie-uvular-common.wsca  pie-uvular.wsca  pie.alias  pre-pgmc.rsca
examples/indo-european/balto-slavic/: config.asca
examples/indo-european/germanic/: config.asca  early-pgmc.rsca  late-pgmc.rsca  setup.rsca
examples/indo-european/germanic/nwg/: asdf.rsca
examples/indo-european/germanic/pgmc/: early.rsca  late.rsca  pre.rsca
examples/indo-european/germanic/wg/: asdf.rsca
examples/indo-european/indo-iranian/: config.asca  ii-lex.wsca  pre-pii.rsca  setup.rsca  to-pii.rsca
examples/indo-european/italo-celtic/: config.asca
setup/: features.tsv  readme.md  tsv_to_json.py
src/: cardinals.json  diacritics.json  error.rs  expected_res.json  lexer.rs  lib.rs  main.rs  parser.rs  rule.rs  seg.rs  subrule.rs  syll.rs  trie.rs  word.rs
src/alias/: lexer.rs  mod.rs  parser.rs
src/cli/: args.rs  convert.rs  idea.md  mod.rs  parse.rs  run.rs  seq.rs  util.rs
src/cli/config/: grammar.md  lexer.rs  parser.rs
src/error/: mod.rs  runtime.rs  syntax.rs
