[package]
name = "asca-rust"
author = "James S. Girven"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[lib]
name = "asca"
crate-type = ["cdylib", "lib"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2"
lazy_static = "1.4.0"
wasm-bindgen = "0.2.95"
