[package]
name = "asca"
authors = ["James Girven"]
version = "0.2.1"
edition = "2021"
license = "GPL-3.0-only"
categories = ["command-line-utilities"]
keywords = ["linguistics"]
include = ["src", "doc*.md", "README.md", "CHANGELOG.md", "LICENSE"]
repository = "https://github.com/Girv98/asca-rust"
description = "A linguistic sound change applier"

[profile.release]
strip = true

[lib]
name = "asca"
crate-type = ["cdylib", "lib"]

# Ensure static compilation
# See: https://github.com/BurntSushi/ripgrep/pull/1613
[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]
# See: https://github.com/rust-lang/compiler-team/issues/422
[target.x86_64-unknown-linux-musl]
rustflags = [
  "-C", "target-feature=+crt-static",
  "-C", "link-self-contained=yes",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2"
lazy_static = "1.4.0"
wasm-bindgen = "0.2.95"
clap = { version = "4.5.23", features = ["derive", "color"] }
serde-wasm-bindgen = "0.6.5"
clap_complete = "4.5.40"
