[package]
name = "asca"
authors = ["James Girven"]
version = "0.5.0"
edition = "2021"
license = "GPL-3.0-only"
categories = ["command-line-utilities"]
keywords = ["linguistics"]
include = ["src", "doc/doc*", "README.md", "CHANGELOG.md", "LICENSE"]
repository = "https://github.com/Girv98/asca-rust"
description = "A linguistic sound change applier"

[profile.release]
strip = true

[lib]
name = "asca"
crate-type = ["cdylib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2"
lazy_static = "1.4.0"
wasm-bindgen = "0.2.95"
clap = { version = "4.5.23", features = ["derive", "color"] }
serde-wasm-bindgen = "0.6.5"
clap_complete = "4.5.40"
